Manual: More improvements for viewing on mobile devices.

--- a/manual/relax.css
+++ b/manual/relax.css
@@ -47,7 +47,6 @@ TABLE.PAD TD	{ padding:3px; }
 TABLE.BORDER TD	{ border:1px solid black; }
 TABLE.equation	{ width:100%; }	/* place eq nos at right/left edge */
 TABLE.equation > *	{ vertical-align:baseline; }
-TABLE.equation TD	{ white-space:nowrap; }
 TABLE		{ border-collapse: collapse; }
 
 /* document-specific styles come next */
@@ -187,11 +186,25 @@ pre {
     word-wrap: break-word;       /* Internet Explorer 5.5+ */
 }
 
+/* Caption fix: Figure legends should be at the bottom. */
+table caption.BOTTOM {
+     caption-side: bottom;
+}
+
 /* Mobile view: Improved support for small screens. */
 @media screen and (max-width: 600px) {
     /* Prevent images being too large. */
     img {
         max-width: 330px;
+    }
+    table.equation {
+        font-size: 70%;
+        size: 70%;
+    }
+
+    /* Proportional table sizes. */
+    table {
+        width: 100%;
     }
 
     /* Smaller navigation panel. */
@@ -203,5 +216,14 @@ pre {
     /* Decrease list indentation. */
     ul {
         padding-left: 1em;
+    }
+
+    /* Break up tiled figures. */
+    .PAD table, .PAD tr, .PAD td {
+        display: block;
+    }
+    .PAD td {
+        border: none;
+        position: relative;
     }
 }
