Some slight colour tweeks.

--- a/relax.css
+++ b/relax.css
@@ -170,7 +170,7 @@ p#tagline {
     font-weight:bold;
     font-size:large;
     text-align : center;
-    background-color:#56ded5;
+    background-color: #51c3d3;
     color:#00004F;
     padding-top:10px;
     padding-bottom:10px;
@@ -219,7 +219,7 @@ p#tagline {
     }
     .menu_title {
         font-size: 24px;
-        background: #56ded5;
+        background: #51c3d3;
         padding: 14px 16px;
         text-indent: 0;
     }
