Mobile: Allow for wrapping in pre elements in http://www.nmr-relax.com/fdl.html.

--- a/relax.css
+++ b/relax.css
@@ -904,6 +904,14 @@ h3 {
 
 
 /*
+ * pre element formatting.
+ */
+
+pre {
+    white-space: pre-wrap;
+}
+
+/*
  * Section:  Link formatting
  */
 
