Mobile: The mobile header is now fixed.
This required javascript modifications to preserve scrolling between opening and closing the menu.

--- a/relax.css
+++ b/relax.css
@@ -216,6 +216,7 @@ p#tagline {
         float: none;
         width: auto;
         overflow: hidden;
+        border: none;
     }
     .menu_title {
         font-size: 24px;
@@ -235,12 +236,20 @@ p#tagline {
     /* Default hide the elements. */
     .menu #menu_elements {
         display: none;
+        margin-top: 50px;
     }
 
     /* Show the mobile menu header. */
     .menu_mobile_header {
         height: 50px;
         display: block;
+        position: fixed;
+        top: 0;
+        width: 100%;
+        background: #b8edff;
+        border: thin solid #88cbff;
+        box-sizing: border-box;
+        z-index: 1;
     }
 
     /* Mobile logo formatting. */
@@ -296,6 +305,7 @@ p#tagline {
         padding-left: 2%;
         padding-right: 2%;
         padding-bottom: 2%;
+        margin-top: 50px;
     }
 }
 
