Mobile: Added borders to the mobile menu.

--- a/relax.css
+++ b/relax.css
@@ -237,6 +237,9 @@ p#tagline {
     .menu #menu_elements {
         display: none;
         margin-top: 50px;
+        border-left: thin solid #88cbff;
+        border-right: thin solid #88cbff;
+        border-bottom: thin solid #88cbff;
     }
 
     /* Show the mobile menu header. */
