CSS fixes as identified via the W3C CSS Validator.

--- a/relax.css
+++ b/relax.css
@@ -364,7 +364,6 @@ h3 {
         font-family: "FontAwesome";
         content: '\f078'; /* Font Awesome fa-chevron-down */
         font-size: 12px;
-        font-weight: 10;
     }
 
     /* Add a symbol to indicate the header can be collapsed. */
@@ -578,7 +577,7 @@ h3 {
     .release_table td:nth-of-type(1):before { content: "Package"; }
     .release_table td:nth-of-type(2):before { content: "MD5"; }
     .release_table td:nth-of-type(3):before { content: "GPG"; }
-    .release_table td:nth-of-type(4):before { align=left; content: "Size (B)"; }
+    .release_table td:nth-of-type(4):before { content: "Size (B)"; }
     .release_table tr.release td:nth-of-type(1):before { content: ""; }
 
     /* Body cells */
@@ -763,7 +762,7 @@ h3 {
 @media screen and (max-width: 1000px) {
     .ms_visual_studio_table {
         border-spacing: 0;
-        border-collapse: none;
+        border-collapse: collapse;
     }
 
     /* Destroy the table! */
